# binq

./: .gitignore  Cargo.toml  README.md
binq/: __init__.py  cle.py
scripts/: print_il.py  test.py  test_buf.py  test_cle.py
src/: analysis.rs  convert_ir.rs  database.rs  ir.rs  lib.rs  lifting.rs  main.rs  query.rs  tests.rs  utils.rs
src/analysis/: code_flow.rs  data_flow.rs  data_sizes.rs
src/convert_ir/: ops.rs
src/query/: expr.rs  fields.rs
src/utils/: array_try_map.rs  small_multi_map.rs  vec_set.rs
