[package]
name = "binq"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
hecs = { version = "0.9.1", features = ["macros"] }
itertools = "0.10.5"
phf = { version = "0.11.1", features = ["macros"] }
pyo3 = { version = "0.17.3", features=[
    "auto-initialize",
    "extension-module",
] }
