[package]
name = "binq"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
anyhow = "1.0.66"
hecs = { version = "0.9.1", features = ["macros"] }
phf = { version = "0.11.1", features = ["macros"] }
smallvec = "1.10.0"

[dependencies.pyo3]
version = "0.17.3"
features=[
    "auto-initialize",
    "extension-module",
    "anyhow",
]

[dependencies.iced-x86]
version = "1.17.0"
default-features = false
features = [
    "decoder",
    "instr_info",
    "intel",
    "std",
    "exhaustive_enums",
]
